Prevent overflow on animation

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -23,7 +23,7 @@ input[type='color'] {
   }
 
   &::-moz-color-swatch {
-    @apply rounded-full;
+    @apply border-0 rounded-full;
   }
 }
 
